# NanoAi

./: .gitignore  README.md  build.gradle.kts  build_apk.ipynb  gradle.properties  gradlew  gradlew.bat  local.properties.template  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/nanoai/llm/: LlamaBridge.kt  LogActivity.kt  MainActivity.kt  ModelManagerActivity.kt  NanoAiApplication.kt  RagSettingsActivity.kt
app/src/main/java/com/nanoai/llm/model/: CatalogModel.kt  ModelManager.kt
app/src/main/java/com/nanoai/llm/rag/: RagManager.kt  WebScraper.kt
app/src/main/java/com/nanoai/llm/service/: InferenceService.kt  ModelDownloadService.kt
app/src/main/java/com/nanoai/llm/tools/: ToolManager.kt  WebFetcher.kt
app/src/main/java/com/nanoai/llm/ui/: ChatAdapter.kt
app/src/main/java/com/nanoai/llm/util/: AppLogger.kt  NotificationHelper.kt
app/src/main/java/com/nanoai/llm/vector/: VectorStore.kt
app/src/main/res/drawable/: bg_bubble_ai.xml  bg_bubble_user.xml  ic_ai.xml  ic_launcher_foreground.xml  ic_memory.xml  ic_notification.xml  ic_rag.xml
app/src/main/res/layout/: activity_logs.xml  activity_main.xml  activity_model_manager.xml  activity_rag_settings.xml  dialog_add_source.xml  dialog_download_model.xml  dialog_model_catalog.xml  item_catalog_model.xml  item_log.xml  item_message.xml  item_model.xml  item_source.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml
